--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "dependencies": {
     "@craftjs/core": "0.1.0-beta.20",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.0",
+    "concurrently": "^6.2.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -23,8 +26,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node server.js",
+    "build": "cd frontend && npm run build",
+    "install-frontend": "cd frontend && npm install",
+    "frontend": "cd frontend && npm start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
